--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="card">
       <h2>Projects</h2>
       <ul>
-        <li><a href="https://github.com/YOUR_GITHUB_USERNAME/Draft_Craft">Draft Craft</a> — NBA draft tracking & analysis</li>
-        <li><a href="https://github.com/YOUR_GITHUB_USERNAME/nba-fancolor-30">NBA Fan Color 30</a> — interactive fan rating poster</li>
+        <li><a href="https://github.com/detyang/Draft_Craft">Draft Craft</a> — NBA draft tracking & analysis</li>
+        <li><a href="https://github.com/detyang/nba-fancolor-30">NBA Fan Color 30</a> — interactive fan rating poster</li>
       </ul>
     </div>
 
