--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </style>
   </head>
   <body>
-    <h1>0576-027-217-312</h1>
+    <h1>Det Yang</h1>
+    <h3>0576-027-217-312</h3>
     <div class="muted">Data Scientist · R/Shiny</div>
 
     <div class="card">
